--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+**Warning:** this package was created to see what's required to publish a package to PyPi. It was never meant for real-life use. 
+
 http://pypi.python.org/pypi/mailert
